<resources>
    <string name="app_name">technicalTest</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="welcome_message">Hello, %1$s %2$s %3$s</string>
    <string name="name">%1$s %2$s</string>
    <string name="title">Name</string>
    <string name="gender">Gender</string>
    <string name="email">Email</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="phone">Phone</string>
</resources>